# file-host

./: command
app/: .gitignore  Cargo.toml
app/src/: main.rs  memory_store.rs  routes.rs
app/src/handlers/: file_handler.rs  root_handler.rs  session_handler.rs
app/templates/: index.html
