[package]
name = "file_host"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
actix-multipart = "0.7"
actix-files = "0.6"
actix-session = "0.10"
uuid = { version = "1.11", features = ["v4"] }
anyhow = "1.0"
askama = "0.12"
futures-util = "0.3"
sanitize-filename= "0.6"
time = "0.3"
futures = "0.3"
dotenv = "0.15"

